--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,182 @@
+2006-11-20  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* NEWS, configure.ac (AC_INIT):
+	Version 1.3.6 released.
+
+	* NEWS: Describe 1.3.6's changes.
+	* NEWS, README, README-alpha, TODO: Change from GPL to FDL.
+	* .cvsignore, README-cvs, bootstrap, bootstrap.conf: New files.
+	* doc/Makefile.am, lib/Makefile.am: New files.
+	* THANKS: Change own email address to cs.ucla.edu.  Add Sverre Jarp.
+	* TODO: Add new tasks to remove porting cruft and
+	all those buggy scripts.
+
+	* configure.ac: Renamed from configure.in.
+	(AC_PREREQ): Bump to 2.60.
+	(AC_INIT): Bump version to 1.3.6.
+	(AC_CONFIG_AUX_DIR): New.
+	(AC_CONFIG_HEADERS): Move config.h to lib.
+	Input is now lib/config.hin.
+	(AM_INIT_AUTOMAKE): Add gnits, dist-shar.
+	(AC_PROG_CC_STDC): New, replacing AC_PROG_CC.
+	(AM_PROG_CC_C_O, AC_PROG_RANLIB): New.
+	(AC_AIX, AC_GNU_SOURCE, AC_MINIX): Remove; gnulib does them now.
+	(gl_EARLY, gl_INIT): New.
+	match.c was moved to lib/match.c.
+	(AC_CHECK_HEADERS_ONCE): Replace AC_CHECK_HEADERS.  Don't check
+	for sys/utime.h or utime.h.
+	(AC_CHECK_FUNCS_ONCE): Replace AC_CHECK_FUNCS.  Check for fchmod
+	and fchown, not utime.
+	(AC_REPLACE_FUNCS): Remove; rpmatch is now done by gnulib.
+	(AC_CONFIG_FILES): Add doc/Makefile, lib/Makefile.
+
+	* bits.c: Use the more-usual form for copyright notices in source code.
+	* deflate.c: Likewise.
+	* gzip.c: Likewise.
+	* gzip.h: Likewise.
+	* inflate.c: Likewise.
+	* lzw.h: Likewise.
+	* revision.h: Likewise.
+	* tailor.h: Likewise.
+	* trees.c: Likewise.
+	* unpack.c: Likewise.
+	* unzip.c: Likewise.
+	* util.c: Likewise.
+	* crypt.c (dummy): Add decl so that pedantic compilers won't
+	complain about an empty file.
+	* gzip.c (license_msg): Use more-modern wording.
+	Include fcntl-safer.h, openat.h, stat-macros.h, stat-time.h.
+	Simply include <dirent.h> if !NO_DIR, removing a rats-nest of
+	#ifdefs.
+	Simply include <utimens.h> if !defined NO_UTIME, removing a
+	another rats-nest of #ifdefs.
+	(DIR_OPT, TIME_OPT): Remove.
+	(_D_EXACT_NAMLEN): Renamed from NAMLEN.  All uses changed.
+	(S_ISDIR, S_ISREG, O_BINARY, O_CREAT, O_EXCL, S_IRUSR, S_IWUSR):
+	Remove; gnulib now does this.
+	(RETSIGTYPE): Remove; Autoconf does this.
+	(program_name): Renamed from progname, for compatibility with gnulib.
+	All uses changed.
+	(time_stamp): Now struct timespec, not time_t.  All uses changd.
+	(remove_oftime): Now volatile.
+	(reset_times): Remove; now done by futimens.
+	(usage): Remove.
+	(try_help): New function.
+	(help, license): Don't output date as part of version.
+	A version number suffices.
+	(help): Redo help message to match style of coreutils etc.
+	(version): Don't bother printing compile-time configuration info
+	like STDC_HEADERS.
+	(main): Don't assume strlen (argv[0]) < INT_MAX (!).
+	On usage errors, suggest --help without outputting all the help.
+	(main, do_list): Remove unnecessary casts.
+	(treat_stdin, treat_file, get_method, copy_stat):
+	Support sub-second time stamp resolution.
+	(treat_file, copy_istat): Close some race conditions if files are
+	renamed as we read or write them.
+	(treat_file): Do not attempt to reset the access times of
+	directories that we read.
+	(open_and_stat, open_input_file): New functions.
+	(do_stat, get_istat): Remove; most of the contents went to these new
+	functions.
+	(make_ofname): Don't use WARN, as it affects exit status.
+	(get_method): When the original file name was truncated,
+	restore from its base name, not from its full name.
+	(do_list): Avoid undefined behavior with out-of-range time stamps.
+	ctime, for example, cannot be invoked on arbitrary time stamps safely,
+	since it might overrun an internal buffer.  Do not assume that
+	localtime succeeds.
+	(copy_stat): Do not remove input file; that's now the caller's
+	responsibility.  This avoids a problem if there is a write error
+	when the caller closes the output file.
+	(treat_dir): New arg FD, to avoid a race condition.  All uses changed.
+	(remove_output_file): New function.
+	(abort_gzip): Use it.
+	(abort_gzip_signal): New function, which is async-signal-safe.
+	Exit with the signal that we got.
+	* gzip.h (program_name, time_stamp, abort_gzip): Adjust decls to
+	match gzip.c changes.
+	* inflate.c (huft_build): Return 2 if null input.
+	* tailor.h (HAVE_UTIME): Do not define; gnulib does this now.
+	(OPEN): Use open_safer, not plain open.
+	* unlzh.c (NPT): Set to 1<<TBIT, not to the maximum of NT and NP.
+	(make_table): Report an error if 1<<tablebits < nextcode.
+	(read_pt_len): Report an error if 16 < c.
+	* unpack.c (read_tree): Report an error if the tree has too many
+	leaves while reading it.  Fix off-by-one error in final check.
+	* util.c: Include <xalloc.h>, for xalloc_die decl.
+	(gzip_base_name): Renamed from base_name, so we don't collide
+	with gnulib.  All uses changed.
+	(add_envopt): Use xstrdup instead of xmalloc+strcpy.
+	Use xcalloc rather than calloc + check.
+	(gzip_error): Renamed from error, so we don't collide with gnulib.
+	All uses changed.
+	(xalloc_die): New function.
+	(xmalloc): Remove; no longer needed.
+	* zip.c (zip): Watch for time stamp overflow; the old code
+	mishandled negative time stamps.
+
+	* gzexe.in: Add support for --help, --version, --.
+	Don't call basename or sed if we can avoid it.
+	* zdiff.in: Likewise.
+	* zforce.in: Likewise.
+	* zgrep.in: Likewise.
+	* zless.in: Likewise.
+	* zmore.in: Likewise.
+	* znew.in: Likewise.
+	* zdiff.in: Protect against file names beginning with "-".
+	* zmore.in: Likewise.
+	* zgrep.in: Use printf rather than echo, to avoid problems with
+	leading "-" and backslash.  Return status of subsidiary grep.
+	* zless.in: Add copyright notice.
+
+	* zless.1: We now pass "--" to LESSOPEN.
+	(BUGS): Mention that input file arguments are required.
+	Add copyright notice.
+
+	* COPYING: Update to current version.
+
+	* Makefile.am (SUBDIRS): New macro.
+	(AUTOMAKE_OPTIONS): Remove; now done in configure.ac.
+	(M4DIR, ACINCLUDE_INPUTS): Remove.
+	(EXTRA_DIST): Remove getopt.h.
+	(gzip_SOURCES): Remove getopt.c, getopt1.c, yesno.c.
+	(gzip_LDADD): Change from @LIBOBJS@ to lib/libgzip.a.
+	(AM_MAKEINFOFLAGS, info_TEXINFOS, gzip_TEXINFOS, ASCPP, LN_S):
+	(match.$(OBJEXT)): Move to subdirectory makefiles.
+	(.in): Substitute @VERSION@, too.
+	(check-local): New rule.
+	(MOSTLYCLEANFILES): Add _match.S.
+
+	* doc/gzip.texi: Renamed from gzip.texi.  Change to GNU FDL
+	without invariant sections or cover texts.  Don't put
+	version number or date into sample gzip -h output.
+	* lib/match.c: Renamed from match.c.  Add ia64 version
+	written by Sverre Jarp (HP Labs).
+
+	* INSTALL: Remove from CVS; now created automatically by
+	the bootstrap script.
+	* Makefile.in: Likewise.
+	* aclocal.m4: Likewise.
+	* config.h.in: Likewise.
+	* configure: Likewise.
+	* depcomp: Likewise.
+	* fdl.texi: Likewise.
+	* getopt.c: Likewise.
+	* getopt.h: Likewise.
+	* getopt1.c: Likewise.
+	* gzip.doc: Likewise.
+	* gzip.info: Likewise.
+	* install-sh: Likewise.
+	* mdate-sh: Likewise.
+	* missing: Likewise.
+	* mkinstalldirs: Likewise.
+	* rpmatch.c: Likewise.
+	* stamp-vti: Likewise.
+	* texinfo.tex: Likewise.
+	* version.texi: Likewise.
+	* yesno.c: Likewise.
+
 2002-09-30  Paul Eggert  <eggert@twinsun.com>
 
 	* NEWS, README, revision.h, configure.in (AM_INIT_AUTOMAKE):
@@ -14,7 +193,7 @@
 
 	* match.c: Accept __i386 and __i386__ as synonyms for i386.
 	Bug reported by "fork __" <bouloumag@hotmail.com>.
-	
+
 2002-09-29  Paul Eggert  <eggert@twinsun.com>
 
 	* gzip.texi (Overview): Suggest how to use gunzip on zip files.
@@ -31,7 +210,7 @@
 	names longer than 14 bytes.  Rely on "mv"'s error-reporting.
 	This fixes a portability bug reported by Ralf Neubauer, along
 	with some other bugs.
-	
+
 	Remove dangling output symlinks properly.
 	Bug reported by Kalle Olavi Niemitalo.
 	* gzip.c (lstat): New macro, for platforms lacking lstat.
@@ -54,7 +233,7 @@
 	Check against compressing "tail".
 	Check against "skip=" line with no integer.
 	* zgrep.in: Exit with status 2 if trouble, for consistency with grep.
-	
+
 	* gzip.c (main): Avoid core dump in diagnostic message if
 	incorrect suffix is given.
 
@@ -62,7 +241,7 @@
 
 	* zdiff.in: Use "trap -" instead of "trap".  Patch by Nicolas Boullis.
 	Use names, not numbers, for signals.  Patch by Andrew Stribblehill.
-	
+
 	* NEWS, README, revision.h, configure.in (AM_INIT_AUTOMAKE):
 	Revision 1.3.4, dated today.
 
@@ -104,7 +283,7 @@
 	* README-alpha: Now using latest stable GNU tools.
 	Using the latest tools allows gzip to build correctly on hosts
 	conforming to POSIX 1003.1-2001.
-	
+
 	* configure.in (match): Use AC_LIBOBJ; Autoconf 2.53 requires it.
 	(LIBOBJS): No longer need to subst, since AC_LIBOBJ does it.
 	(AC_PREREQ): Bump to 2.53.
@@ -114,7 +293,7 @@
 
 	* gzip.c (license_msg): Update copyright.
 	(z_len): Now of type size_t.
-	
+
 2001-11-03  Paul Eggert  <eggert@twinsun.com>
 
 	* NEWS, README, revision.h, gzip.texi, configure.in (AM_INIT_AUTOMAKE):
@@ -134,7 +313,7 @@
 	* gzip.texi, gzip.1: Add pointers to RFCs 1951 and 1952.
 	Mention that gzip --list reports file sizes modulo 2^32.
 	* gzip.1: Remove incorrect report of 2 GB bug.  Add copyright notice.
-	
+
 2001-09-30  Paul Eggert  <eggert@twinsun.com>
 
 	* NEWS, README, revision.h, gzip.texi, configure.in (AM_INIT_AUTOMAKE):
@@ -169,7 +348,7 @@
 	(get_method): "get newer version of gzip" -> "not supported"
 	(check_ofname): Use yesno instead of checking for 'y' ourselves.
 	(treat_file): Do not assume link count fits in int.
-	
+
 	* gzip.h (yesno): New decl.
 
 	* util.c (display_ratio): Use floating point to compute ratio:
@@ -1061,24 +1240,13 @@ Sat Oct 31 12:46:00 1992  Jean-loup Gailly  (jloup@chorus.fr)
 	  much tested, sorry.
 
 
-Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002 Free Software Foundation,
-Inc.
-	
-Copyright (C) 1992, 1993 Jean-loup Gailly
+	-----
 
-This file is part of gzip (GNU zip).
+	Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2006 Free
+	Software Foundation, Inc.
 
-gzip is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2, or (at your option)
-any later version.
+	Copyright (C) 1992, 1993 Jean-loup Gailly
 
-gzip is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with gzip; see the file COPYING.  If not, write to
-the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-Boston, MA 02111-1307, USA.
+	Copying and distribution of this file, with or without
+	modification, are permitted provided the copyright notice
+	and this notice are preserved.
