--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,18 @@
-Current Version: 1.3.5.
-See the file ChangeLog for the details of all changes.
+Major changes in Gzip 1.3.6 (2006-11-20)
+
+* Fix some race conditions in setting file time stamps, permissions, and owner.
+* Fix some race conditions in signal handling.
+* When gzip exits due to a signal, it exits with the signal's status, not 1.
+* gzip now restores file time stamps to the resolution supported by the
+  time-setting primitives of the operating system, typically 1 microsecond.
+  Formerly it restored them only to the nearest second.
+* gzip -r no longer attempts to reset the last-access times of directories
+  it reads, as this messes up when other processes are reading the directories.
+* The options --version and --help now work on all gzip-installed executables,
+  and now use a format similar to other GNU programs.
+* The manual is now distributed under the terms of the GNU Free
+  Documentation License without invariant sections or cover texts.
+* Port to current versions of Autoconf, Automake, and Gnulib.
 
 Major changes from 1.3.4 to 1.3.5
 * gzip now removes any output symlink before writing output file.
@@ -170,7 +183,7 @@ Major changes from 1.0.4 to 1.0.5.
 Major changes from 1.0.3 to 1.0.4.
 * Added optimized asm version for 68020.
 * Add support for DJGPP.
-	
+
 * Add support for the Atari ST.
 * Added zforce to rename gzip'ed files with truncated names.
 * Do not install with name uncompress (some systems rely on the
@@ -260,24 +273,15 @@ Major changes form 0.5 to 0.6:
 * Accept gzcat in addition to zcat for people having /usr/bin before
   /usr/local/bin in their path.
 
-
 
-Copyright (C) 1999, 2001, 2002 Free Software Foundation, Inc.
+========================================================================
+
+Copyright (C) 1999, 2001, 2002, 2006 Free Software Foundation, Inc.
 Copyright (C) 1992, 1993 Jean-loup Gailly
 
-This file is part of GNU tar.
-
-GNU tar is free software; you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation; either version 2, or (at your option)
-any later version.
-
-GNU tar is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with tar; see the file COPYING.  If not, write to
-the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
-Boston, MA 02111-1307, USA.
+Permission is granted to copy, distribute and/or modify this document
+under the terms of the GNU Free Documentation License, Version 1.2 or
+any later version published by the Free Software Foundation; with no
+Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
+Texts.  A copy of the license is included in the ``GNU Free
+Documentation License'' file as part of this distribution.
