* gzip.c (abort_gzip_signal): Don't call abort () as a "safeguard", since it actually causes a core dump.  Problem reported by Jakub Bogusz.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-12-01  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* gzip.c (abort_gzip_signal): Don't call abort () as a "safeguard",
+	since it actually causes a core dump.  Problem reported by
+	Jakub Bogusz.
+
 	* NEWS: Describe gzexe changes noted below.
 	* Makefile.am (.in): Don't bother with SEDCMD.  This stuff isn't needed
 	any more (the hosts it caters to are long extinct), and was questionable
