--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,39 @@
+2006-12-06  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* NEWS: Document the fixes below.
+	* configure.ac (AC_CHECK_FUNCS_ONCE): Add siginterrupt.
+	* gzip.c (lstat) [!defined(HAVE_LSTAT) && !defined(lstat)]: Remove.
+	(SA_NOCLDSTOP, sigprocmask, sigset_t) [!defined SA_NOCLDSTOP]:
+	New macros.
+	(siginterrupt) [!defined SA_NOCLDSTOP && ! HAVE_SIGINTERRUPT]:
+	New macro.
+	(HAVE_WORKING_O_NOFOLLOW): Define to 0 if not defined.
+	(caught_signals, exiting_signal, remove_ofname_fd): New vars.
+	(remove_ofname): Remove; all uses changed to remove_ofname_fd.
+	(same_file, name_too_long): Remove.
+	(install_signal_handlers): New function.  It prefers sigaction,
+	which is more reliable in the presence of race conditions.
+	Catch SIGXCPU and SIGXFSZ, too.
+	(main): Use it instead of installing them by hand.
+	(treat_file): Check for read error when closing ifd.
+	(treat_file, create_outfile, remove_output_file):
+	Avoid race conditions with signals.
+	(create_outfile, check_ofname): Remove most of the gorp about
+	working around ENAMETOOLONG deficiencies.  It's obsolete now, and
+	anyway it had race conditions.  Just rely on O_EXCL and
+	ENAMETOOLONG.  The worst that can happen is that a file name will
+	be silently truncated on an obsolete machine, but no data will be lost.
+	(open_and_stat): Use HAVE_WORKING_O_NOFOLLOW rather than O_NOFOLLOW
+	to work around some O_NOFOLLOW bugs.  Otherwise, fall back on
+	lstat only if lstat is available, as symlinks don't exist otherwise.
+	(open_input_file): Use O_NONBLOCK and O_NOCTTY too, to avoid
+	hanging gzip on special files.
+	(abort_gzip_signal): If sigaction is not available, ignore
+	signals.  If we get the exiting signal, exit with ERROR status
+	rather than raising a signal.
+	* tailor.h (NO_ST_INO): Remove; no longer used now that same_file
+	is gone.
+
 2006-12-05  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Port to Tandem NSK/OSS, which lacks fchdir.  Problem reported by
