--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,14 @@ Major changes in Gzip 1.3.7 (not yet released)
 
 * Fix some gzip problems:
   - Refuse to compress setuid or setgid files, or files with the sticky bit.
-  - Fix more race conditions in setting file permissions and owner.
+  - Fix more race conditions in setting file permissions and owner,
+    removing output files, following symbolic links, and dealing with
+    special files.
+  - Remove most of the code working around ENAMETOOLONG deficiencies.
+    Systems with those deficiencies are long-dead, and the workarounds
+    had race conditions on modern hosts.
+  - Catch CPU time and file size limit signals, too.
+  - Check for read errors when closing files.
   - Fix a core dump caused by a stray abort mistakenly introduced in 1.3.6.
 * Fix some gzexe problems:
   - Improve resistance to denial-of-service attacks.
