--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-2006-12-05  Bruno Haible  <bruno@clisp.org>  (tiny change)
+2006-12-06  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* NEWS, configure.ac (AC_INIT):
+	Version 1.3.7 released.
+
+2006-12-06  Bruno Haible  <bruno@clisp.org>  (tiny change)
 	and Paul Eggert  <eggert@cs.ucla.edu>
 
 	Fix build failure on case-insensitive file systems.
