--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Major changes in Gzip 1.3.7 (not yet released)
+Major changes in Gzip 1.3.7 (2006-12-06)
 
 * Fix some gzip problems:
   - Refuse to compress setuid or setgid files, or files with the sticky bit.
