--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-12-08  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* configure.ac (for assembler): Set ASFLAGS_config to
+	-Wa,--noexecstack if this seems advisable on this platform.
+	Problem reported by Mike Frysinger in
+	<http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00018.html>.
+	* lib/Makefile.am (match.$(OBJEXT)): Use ASFLAGS_config.
+
 2006-12-07  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* Makefile.am (install-exec-hook): Fix bug when installing
