--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-12-08  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* .cvsignore: Add .deps, gzexe, gzip, zdiff, zforce, zgrep,
+	zless, zmore, znew.
+	* doc/.cvsignore: Add Makefile.
+	* lib/.cvsignore: Add .deps, Makefile, alloca.h, config.h, fcntl.h,
+	stamp-h1, stdint.h, sys.
+
 	* configure.ac (for assembler): Set ASFLAGS_config to
 	-Wa,--noexecstack if this seems advisable on this platform.
 	Problem reported by Mike Frysinger in
