--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+2006-12-08  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Fix problems in porting to NSK reported by Matthew Woehlke in
+	<http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00025.html> and
+	<http://lists.gnu.org/archive/html/bug-gzip/2006-12/msg00027.html>.
+	* gzip.h: Include <limits.h>, for SSIZE_MAX.
+	(INBUFSIZE): Don't make it any larger than SSIZE_MAX.
+	Problem reported by Matthew Woehlke in
+	<http://lists.gnu.org/archive/html/bug-gzip/2006-11/msg00013.html>.
+	* gzip.c: Don't include <limits.h>, as gzip.h now does this.
+	* util.c: Likewise.
+	* gzip.c (main): Set exiting_signal before installing signal handlers.
+	(install_signal_handlers): Don't set exiting_signal here.  This
+	fixes a C99ism.
+	* zip.c: Include timespec.h, for time_stamp type.
+
 2006-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)
 
 	* gzexe.in: Work around FreeBSD shell trap bug.
