--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2006-12-08  Paul Eggert  <eggert@cs.ucla.edu>
 
+	* NEWS, configure.ac (AC_INIT):
+	Version 1.3.8 released.
+
 	* gzexe.in (mktemp_status): New var, used to see whether
 	mktemp is a known command.  Use this instead of confounding
 	mktemp's existence with its success.
