--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Major changes in Gzip 1.3.8 (2006-12-08)
+
+* Fix some gzip problems:
+  - A security fix from Debian 1.3.5-5 was inadvertently omitted.
+  - The assembler is now invoked with --noexecstack if supported,
+    so that gzip can better resist stack-smashing attacks.
+
 Major changes in Gzip 1.3.7 (2006-12-06)
 
 * Fix some gzip problems:
