--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-12-13  Bruno Haible  <bruno@clisp.org>
+
+	* configure.ac: Use $CPPFLAGS everywhere $CPP is used, and use
+	$CPPFLAGS $CFLAGS everywhere $CC is used.
+	* lib/Makefile.am (match.$(OBJEXT)): Likewise.
+	* configure.ac: Test the exit code of the $CPP and $ASCPPPOST commands
+	separately.
+
 2006-12-11  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* configure.ac (ASCPPPOST): Simplify to use just 'sed'.
