* NEWS, configure.ac (AC_INIT): Version 1.3.9 released.
* bootstrap (gnulib_tool_options_extras): New var.
(gnulib_tool_options): Use it.
* bootstrap.conf (gnulib_tool_options_extras): Avoid getline and
rpmatch.  gzip doesn't need them, since it doesn't ENABLE_NLS.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Gzip 1.3.9 (2006-12-15)
+
+* No major changes; only porting fixes.
+
 Major changes in Gzip 1.3.8 (2006-12-08)
 
 * Fix some gzip problems:
