--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2006-12-15  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* NEWS, configure.ac (AC_INIT):
+	Version 1.3.9 released.
+
+	* bootstrap (gnulib_tool_options_extras): New var.
+	(gnulib_tool_options): Use it.
+	* bootstrap.conf (gnulib_tool_options_extras): Avoid getline and
+	rpmatch.  gzip doesn't need them, since it doesn't ENABLE_NLS.
+
 2006-12-13  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac: Use $CPPFLAGS everywhere $CPP is used, and use
