--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Gzip 1.3.10 (200?-??-??)
+
+* zcmp and zdiff did not work in the usual case, due to a typo.
+
 Gzip 1.3.9 (2006-12-15)
 
 * No major changes; only porting fixes.
