--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-12-26  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* NEWS: gzip -q now exits with status 2 (not 1) on SIGPIPE.
+	zgrep has many bugs fixed with argument handling, special characters,
+	and exit status.
+	* gzip.c (abort_gzip_signal): Implement gzip -q change.
+	* zgrep.in: Implement zgrep change.
+
 2006-12-23  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* NEWS: Fix bug reported by Martin Mares in
