--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
-Gzip 1.3.10 (200?-??-??)
-
-* zcmp and zdiff did not work in the usual case, due to a typo.
+Major changes in Gzip 1.3.10 (200?-??-??)
 
 * gzip -c and zcat now work on special files, files with special mode bits,
   and files with multiple hard links.
+* gzip -q now exits with status 2 (not 1) when SIGPIPE is received.
+* zcmp and zdiff did not work in the usual case, due to a typo.
+* zgrep has many bugs fixed with argument handling, special characters,
+  and exit status.
 
 Gzip 1.3.9 (2006-12-15)
 
