--- a/ChangeLog
+++ b/ChangeLog
@@ -1640,7 +1640,7 @@ Sat Oct 31 12:46:00 1992  Jean-loup Gailly  (jloup@chorus.fr)
 
 	-----
 
-	Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2006 Free
+	Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2006, 2007 Free
 	Software Foundation, Inc.
 
 	Copyright (C) 1992, 1993 Jean-loup Gailly
