--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in Gzip 1.3.12 (2007-04-13)
+
+* znew now uses $TMPDIR (default /tmp) instead of always using /tmp.
+
 Major changes in Gzip 1.3.11 (2007-02-05)
 
 * As per the GNU coding standards, the behavior of gzip and its
