--- a/README
+++ b/README
@@ -132,7 +132,7 @@ See http://www.cdrom.com/pub/infozip/ for more about zip and unzip.
 
 ========================================================================
 
-Copyright (C) 1999, 2001, 2002, 2006 Free Software Foundation, Inc.
+Copyright (C) 1999, 2001, 2002, 2006, 2007 Free Software Foundation, Inc.
 Copyright (C) 1992, 1993 Jean-loup Gailly
 
 Permission is granted to copy, distribute and/or modify this document
