--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,12 @@ Major changes in Gzip 1.3.12 (2007-04-13)
 
 * znew now uses $TMPDIR (default /tmp) instead of always using /tmp.
 
+* 'gzip -f foo.gz' now creates a file foo.gz.gz instead of complaining.
+
+* It is now documented that gzip ignores case when examining file name
+  extensions; for example, 'gzip test.Gz' (without -f) fails because
+  the file name ends in '.Gz'.
+
 Major changes in Gzip 1.3.11 (2007-02-05)
 
 * As per the GNU coding standards, the behavior of gzip and its
