avoid silent data loss e.g., on NFS, due to unchecked close of stdout
* gzip.c: Include "closein.h".
(main): Use atexit (close_stdin);
* bootstrap.conf (gnulib_modules): Add closein.
Prompted by Mark Kidwell's report and patch in
http://bugs.debian.org/538187
* NEWS (Bug fixes): Mention it.
* */.gitignore: Update.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ GNU gzip NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  gzip no longer ignores a close-induced write failure, e.g., on NFS
+
 
 Major changes in Gzip 1.3.12 (2007-04-13)
 
