maint: update existing copyright year lists to include 2009
* bootstrap.conf (gnulib_modules): Add update-copyright.

--- a/NEWS
+++ b/NEWS
@@ -350,7 +350,7 @@ Major changes form 0.5 to 0.6:
 
 ========================================================================
 
-Copyright (C) 1999, 2001, 2002, 2006, 2007 Free Software Foundation, Inc.
+Copyright (C) 1999, 2001-2002, 2006-2007, 2009 Free Software Foundation, Inc.
 Copyright (C) 1992, 1993 Jean-loup Gailly
 
 Permission is granted to copy, distribute and/or modify this document
