--- a/doc/gzip.texi
+++ b/doc/gzip.texi
@@ -11,8 +11,8 @@ This manual is for Gzip
 (version @value{VERSION}, @value{UPDATED}),
 and documents commands for compressing and decompressing data.
 
-Copyright @copyright{} 1998, 1999, 2001, 2002, 2006, 2007 Free
-Software Foundation, Inc.
+Copyright @copyright{} 1998-1999, 2001-2002, 2006-2007, 2009 Free Software
+Foundation, Inc.
 
 Copyright @copyright{} 1992, 1993 Jean-loup Gailly
 
