gzip: don't use an uninitialized file descriptor
gzip interprets an argument of "-" as indicating stdin, but when
"-" is not the first name on the command line, it doesn't work.
* gzip.c (treat_stdin): Initialize "ifd".
Patch and fine description by Lasse Collin in
http://www.mail-archive.com/bug-gzip@gnu.org/msg00213.html
* Makefile.am (check-local): Exercise the fix.  Based on the above.
* NEWS (Bug fixes): Mention this.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ GNU gzip NEWS                                    -*- outline -*-
 
 ** Bug fixes
 
+  gzip -d no longer fails with "-" as 2nd or subsequent argument
+
   gzip no longer ignores a close-induced write failure, e.g., on NFS
 
   gzip -d no longer segfaults on certain invalid inputs
