--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 GNU gzip NEWS                                    -*- outline -*-
 
-* Noteworthy changes in release ?.?.? (????-??-??) [?]
+* Noteworthy changes in release 1.3.13 (2009-09-30) [stable]
 
 ** Bug fixes
 
