--- a/THANKS
+++ b/THANKS
@@ -195,6 +195,7 @@ Arthur David Olson      ado@elsie.nci.nih.gov
 Piet van Oostrum        piet@cs.ruu.nl
 Rafael R. Pappalardo    rafapa@obelix.cica.es
 Mike Pearlman           canuck@masc38.rice.edu
+Jörg-Volker Peetz       peetz@dynato-kyma.net
 Yves Perrenoud          pyves@nuga.alphanet.ch
 Hal Peterson            hrp@pecan.cray.com
 Pascal Petit            petit@cadillac.ibp.fr
