zgrep: portability improvements; exercise "-f -"
* zgrep.in: Adjust loop not to use seq; it's not portable enough.
Fail if we don't find a free file descriptor.
(exists): New function; Use it in place of less portable "test -e".
Testing for existence of /dev/fd/$fd doesn't work on Solaris 10,
since all 256 always exist (as char devices), but testing for
/proc/$$/fd/$fd does work, so do that instead.
* Makefile.am (TESTS): Add tests/zgrep-f.
* tests/zgrep-f: New test; exercise this bug.
* NEWS (Bug fixes): Mention it.

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,8 @@ GNU gzip NEWS                                    -*- outline -*-
 
   zdiff would fail to print differences in two compressed inputs
 
+  zgrep -f - didn't work
+
 
 * Noteworthy changes in release 1.3.13 (2009-09-30) [stable]
 
