do not use stat.st_mtime of a non-regular file
* gzip.c: Include "timespec.h".
(treat_stdin): Use st_mtime only from a regular file.
This matters at least on Cygwin 1.7.1-1, for which a stdin-pipe has
the mtime of /dev/null, rather than the gzip-documented-for-pipes
"current time".  Reported by Denis Excoffier.

--- a/THANKS
+++ b/THANKS
@@ -74,6 +74,7 @@ Paul Eggert             eggert@cs.ucla.edu
 Enami                   enami@sys.ptg.sony.co.jp
 Kristoffer Eriksson     ske@pkmab.se
 Daniel Eriksson         m91der@bellatrix.tdb.uu.se
+Denis Excoffier         3.1416@free.fr
 Rik Faith               faith@cs.unc.edu
 Larry Fahnoe            fahnoe@c1mpls.mn.org
 Cristian Ferretti       cfs@poincare.mat.puc.cl
