use assembly code matcher when possible
* configure.ac (ASCPPPOST): Backslash-escape "#" in AC_SUBST'd
variable, to keep make from seeing it as a comment-introducer.
Based on a patch by Petr Pisar.
* lib/Makefile.am (match.$(OBJEXT)): Use AM_V_GEN and AM_V_at.
* lib/match.c: Don't include <config.h>.
It would impede configure-time assembler test.
* .x-sc_require_config_h: Exempt lib/match.c from syntax-check.
* .x-sc_require_config_h_first: Likewise.

--- a/THANKS
+++ b/THANKS
@@ -204,6 +204,7 @@ Pascal Petit            petit@cadillac.ibp.fr
 Bruno Pillard		bp@chorus.fr
 Franc,ois Pinard        pinard@iro.umontreal.ca
 Jay Pinkos              pinkos@butyng.bu.edu
+Petr Písař              petr.pisar@atlas.cz
 Thomas Plass            thomas@cogsci.ed.ac.uk
 Mike Polo               mikep@cfsmo.honeywell.com
 Francesco Potorti       pot@fly.cnuce.cnr.it
